功能：支持 MGDB 用户自定义数据源
